--- a/app/desktop/package.json
+++ b/app/desktop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "princess-desktop",
+  "name": "Princess",
   "version": "1.0.0",
   "main": "main.js",
   "repository": "https://github.com/ccheever/princess",
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "electron .",
-    "postinstall": "cp ../../assets/AppIcon.icns node_modules/electron/dist/Electron.app/Contents/Resources/electron.icns"
+    "postinstall": "cp ../../assets/AppIcon.icns node_modules/electron/dist/Electron.app/Contents/Resources/electron.icns && echo 'Replaced Electron icons with custom Princess icons for macOS' || echo 'Copying icons failed (probably because this isnt macOS)'"
   },
   "devDependencies": {
     "electron": "^5.0.6"
