--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "apollo-server-express": "^2.9.2",
     "express": "^4.17.1",
-    "graphql": "^14.5.4"
+    "graphql": "^14.5.4",
+    "knex": "^0.19.3",
+    "pg": "^7.12.1"
   }
 }
