--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
     "project-repl": "^1.5.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "apollo-server-express": "^2.9.2",
     "express": "^4.17.1",
     "graphql": "^14.5.4",
     "knex": "^0.19.3",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "twilite": "^1.1.5"
   }
 }
