--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "nodemon .",
+    "sqlweb": "npx franchise-client@0.2.7"
   },
   "devDependencies": {
     "nodemon": "^1.19.1",
